Modification xml inventory view

--- a/moves_module/views/template.xml
+++ b/moves_module/views/template.xml
@@ -6,8 +6,10 @@
         <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="lot_name"/>
+                <field name="date"/>
                 <field name="production_id"/>
+                <field name="qty_done"/>
+                <field name="state"/>
             </tree>
         </field>
     </record>
