--- a/moves_module/views/template.xml
+++ b/moves_module/views/template.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="date"/>
+                <field name="product_id"/>
                 <field name="qty_done"/>
                 <field name="state"/>
             </tree>
