--- a/moves_module/views/template.xml
+++ b/moves_module/views/template.xml
@@ -4,7 +4,7 @@
         <field name="name">New Tree</field>
         <field name="model">stock.move.line</field>
         <field name="type">tree</field>
-        <field name="groups" eval="[(4, ref('production_id'))]"/>
+        <filter name="inventory_group_custom" string="Inventory moves" context="{'group_by':'production_id'}"/>
         <field name="arch" type="xml">
             <tree>
                 <field name="date"/>
